--- a/simulation/templates/template_unit.xml
+++ b/simulation/templates/template_unit.xml
@@ -104,7 +104,10 @@
   <Sound>
     <SoundGroups>
       <attacked>interface/alarm/alarm_attackplayer.xml</attacked>
-      <attack_slaughter>attack/weapon/knife_attack.xml</attack_slaughter>
+      <attacked_gaia>interface/alarm/alarm_attackcity.xml</attacked_gaia>
+      <attacked_capture>interface/alarm/alarm_attackplayer.xml</attacked_capture>
+      <attacked_capture_gaia>interface/alarm/alarm_attackcity.xml</attacked_capture_gaia>
+      <attack_slaughter>attack/weapon/sword_attack.xml</attack_slaughter>
     </SoundGroups>
   </Sound>
   <StatusBars>
