--- a/simulation/templates/template_unit_cavalry.xml
+++ b/simulation/templates/template_unit_cavalry.xml
@@ -2,12 +2,14 @@
 <Entity parent="template_unit">
   <Attack>
     <Capture>
+      <AttackName>Capture</AttackName>
       <Capture>2.5</Capture>
       <MaxRange>4</MaxRange>
       <RepeatTime>1000</RepeatTime>
       <RestrictedClasses datatype="tokens">Field Palisade Wall</RestrictedClasses>
     </Capture>
     <Slaughter>
+      <AttackName>Slaughter</AttackName>
       <Damage>
         <Hack>100.0</Hack>
         <Pierce>0.0</Pierce>
@@ -17,8 +19,7 @@
     </Slaughter>
   </Attack>
   <Cost>
-    <Population>1</Population>
-    <BuildTime>15</BuildTime>
+    <BuildTime>16</BuildTime>
     <Resources>
       <food>100</food>
     </Resources>
