--- a/simulation/templates/template_unit_infantry.xml
+++ b/simulation/templates/template_unit_infantry.xml
@@ -2,12 +2,14 @@
 <Entity parent="template_unit">
   <Attack>
     <Capture>
+      <AttackName>Capture</AttackName>
       <Capture>2.5</Capture>
       <MaxRange>4</MaxRange>
       <RepeatTime>1000</RepeatTime>
       <RestrictedClasses datatype="tokens">Field Palisade Wall</RestrictedClasses>
     </Capture>
     <Slaughter>
+      <AttackName>Slaughter</AttackName>
       <Damage>
         <Hack>50.0</Hack>
         <Pierce>0.0</Pierce>
@@ -19,32 +21,32 @@
   <Builder>
     <Rate>1.0</Rate>
     <Entities datatype="tokens">
-      structures/{civ}_civil_centre
-      structures/{civ}_crannog
-      structures/{civ}_military_colony
-      structures/{civ}_house
-      structures/{civ}_storehouse
-      structures/{civ}_farmstead
-      structures/{civ}_field
-      structures/{civ}_corral
-      structures/{civ}_dock
-      structures/{civ}_barracks
-      structures/{civ}_arsenal
-      structures/{civ}_forge
-      structures/{civ}_temple
-      structures/{civ}_market
-      structures/{civ}_outpost
-      structures/{civ}_sentry_tower
-      structures/{civ}_defense_tower
-      structures/{civ}_fortress
+      structures/{civ}/civil_centre
+      structures/{civ}/crannog
+      structures/{civ}/military_colony
+      structures/{civ}/house
+      structures/{civ}/storehouse
+      structures/{civ}/farmstead
+      structures/{civ}/field
+      structures/{civ}/corral
+      structures/{civ}/dock
+      structures/{civ}/barracks
+      structures/{civ}/arsenal
+      structures/{civ}/forge
+      structures/{civ}/temple
+      structures/{civ}/market
+      structures/{civ}/outpost
+      structures/{civ}/sentry_tower
+      structures/{civ}/defense_tower
+      structures/{civ}/fortress
       structures/wallset_palisade
-      structures/{civ}_wallset_siege
-      structures/{civ}_wallset_stone
-      structures/{civ}_wonder
+      structures/{civ}/wallset_siege
+      structures/{civ}/wallset_stone
+      structures/{civ}/wonder
     </Entities>
   </Builder>
   <Cost>
-    <BuildTime>10</BuildTime>
+    <BuildTime>12</BuildTime>
     <Resources>
       <food>50</food>
       <wood>0</wood>
@@ -121,6 +123,7 @@
       <gather_ore>resource/mining/mining.xml</gather_ore>
       <gather_ruins>resource/mining/mining.xml</gather_ruins>
       <trained>interface/alarm/alarm_create_infantry.xml</trained>
+      <invalid_building_placement>interface/alarm/alarm_invalid_building_placement.xml</invalid_building_placement>
     </SoundGroups>
   </Sound>
   <Vision>
