--- a/simulation/templates/template_unit_support_female_citizen.xml
+++ b/simulation/templates/template_unit_support_female_citizen.xml
@@ -15,9 +15,7 @@
     <Slaughter>
       <AttackName>Slaughter</AttackName>
       <Damage>
-        <Hack>25.0</Hack>
-        <Pierce>0.0</Pierce>
-        <Crush>0.0</Crush>
+        <Hack>1000</Hack>
       </Damage>
       <MaxRange>2</MaxRange>
     </Slaughter>
@@ -35,6 +33,7 @@
       structures/{civ}/corral
       structures/{civ}/dock
       structures/{civ}/barracks
+      structures/{civ}/stable
       structures/{civ}/arsenal
       structures/{civ}/forge
       structures/{civ}/temple
@@ -82,16 +81,8 @@
   </ResourceGatherer>
   <Sound>
     <SoundGroups>
-      <trained>interface/alarm/alarm_create_female.xml</trained>
-      <select>voice/{lang}/civ/civ_{phenotype}_select.xml</select>
-      <order_walk>voice/{lang}/civ/civ_{phenotype}_walk.xml</order_walk>
-      <order_attack>voice/{lang}/civ/civ_{phenotype}_attack.xml</order_attack>
-      <order_build>voice/{lang}/civ/civ_{phenotype}_build.xml</order_build>
-      <order_gather>voice/{lang}/civ/civ_{phenotype}_gather.xml</order_gather>
-      <order_repair>voice/{lang}/civ/civ_{phenotype}_repair.xml</order_repair>
-      <order_garrison>voice/{lang}/civ/civ_{phenotype}_garrison.xml</order_garrison>
       <attack_melee>attack/weapon/sword.xml</attack_melee>
-      <death>actor/human/death/{phenotype}_death.xml</death>
+      <attack_slaughter>attack/weapon/knife_attack.xml</attack_slaughter>
       <build>resource/construction/con_wood.xml</build>
       <gather_fruit>resource/foraging/forage_leaves.xml</gather_fruit>
       <gather_grain>resource/farming/farm.xml</gather_grain>
@@ -101,6 +92,10 @@
       <gather_ore>resource/mining/mining.xml</gather_ore>
       <gather_ruins>resource/mining/mining.xml</gather_ruins>
       <invalid_building_placement>interface/alarm/alarm_invalid_building_placement.xml</invalid_building_placement>
+      <order_attack>voice/{lang}/civ/civ_{phenotype}_attack.xml</order_attack>
+      <order_build>voice/{lang}/civ/civ_{phenotype}_build.xml</order_build>
+      <order_repair>voice/{lang}/civ/civ_{phenotype}_repair.xml</order_repair>
+      <trained>interface/alarm/alarm_create_female.xml</trained>
     </SoundGroups>
   </Sound>
   <UnitAI>
