--- a/simulation/templates/template_unit_infantry.xml
+++ b/simulation/templates/template_unit_infantry.xml
@@ -11,9 +11,7 @@
     <Slaughter>
       <AttackName>Slaughter</AttackName>
       <Damage>
-        <Hack>50.0</Hack>
-        <Pierce>0.0</Pierce>
-        <Crush>0.0</Crush>
+        <Hack>1000</Hack>
       </Damage>
       <MaxRange>2</MaxRange>
     </Slaughter>
@@ -31,6 +29,7 @@
       structures/{civ}/corral
       structures/{civ}/dock
       structures/{civ}/barracks
+      structures/{civ}/stable
       structures/{civ}/arsenal
       structures/{civ}/forge
       structures/{civ}/temple
@@ -101,18 +100,17 @@
   </ResourceGatherer>
   <Sound>
     <SoundGroups>
-      <select>voice/{lang}/civ/civ_{phenotype}_select.xml</select>
-      <order_walk>voice/{lang}/civ/civ_{phenotype}_walk.xml</order_walk>
+      <attack_slaughter>attack/weapon/knife_attack.xml</attack_slaughter>
       <order_attack>voice/{lang}/civ/civ_{phenotype}_attack.xml</order_attack>
-      <order_gather>voice/{lang}/civ/civ_{phenotype}_gather.xml</order_gather>
-      <order_repair>voice/{lang}/civ/civ_{phenotype}_repair.xml</order_repair>
       <order_build>voice/{lang}/civ/civ_{phenotype}_build.xml</order_build>
       <order_garrison>voice/{lang}/civ/civ_{phenotype}_garrison.xml</order_garrison>
+      <order_gather>voice/{lang}/civ/civ_{phenotype}_gather.xml</order_gather>
+      <order_repair>voice/{lang}/civ/civ_{phenotype}_repair.xml</order_repair>
+      <order_walk>voice/{lang}/civ/civ_{phenotype}_walk.xml</order_walk>
+      <select>voice/{lang}/civ/civ_{phenotype}_select.xml</select>
       <walk>actor/human/movement/walk.xml</walk>
       <run>actor/human/movement/run.xml</run>
       <attack_impact_ranged>attack/impact/arrow_impact.xml</attack_impact_ranged>
-      <attack_melee>attack/weapon/sword_attack.xml</attack_melee>
-      <attack_ranged>attack/weapon/bow_attack.xml</attack_ranged>
       <death>actor/human/death/{phenotype}_death.xml</death>
       <build>resource/construction/con_wood.xml</build>
       <gather_fruit>resource/foraging/forage_leaves.xml</gather_fruit>
